--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kwork-project</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-    Hello
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Kwork-project</title>
+        <link rel="stylesheet" href="./style.css" />
+    </head>
+    <body>
+        <header class="header"></header>
+        <nav class="nav">
+            <ul class="nav__menu">
+                <a href="#"><li>Link1</li></a>
+                <a href="#"><li>Link2</li></a>
+                <a href="#"><li>Link3</li></a>
+            </ul>
+        </nav>
+        <section class="info">
+            <article class="info__content"></article>
+        </section>
+        <aside class="secondary"></aside>
+
+        <footer class="footer">
+            <ul class="footer__menu">
+                <a href="#"><li>Link1</li></a>
+                <a href="#"><li>Link2</li></a>
+                <a href="#"><li>Link3</li></a>
+            </ul>
+        </footer>
+    </body>
 </html>
